--- a/NativeProject/Android/IAP-Test/build.gradle
+++ b/NativeProject/Android/IAP-Test/build.gradle
@@ -46,6 +46,7 @@ android {
         ndk {
             abiFilters 'arm64-v8a'
         }
+        multiDexEnabled true
         versionCode 1
         versionName '1.0'
     }
@@ -96,4 +97,18 @@ dependencies {
     def gson_version = "2.10"
     implementation "com.android.billingclient:billing:$billing_version"
     implementation "com.google.code.gson:gson:$gson_version"
+
+    //implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    /** START - Google Play Builds **/
+    implementation('com.onesignal:OneSignal:4.8.3')
 }
