--- a/NativeProject/Android/IAP-Test/build.gradle
+++ b/NativeProject/Android/IAP-Test/build.gradle
@@ -47,8 +47,8 @@ android {
             abiFilters 'arm64-v8a'
         }
         multiDexEnabled true
-        versionCode 1
-        versionName '1.0'
+        versionCode 81
+        versionName '8.0'
     }
 
     lintOptions {
@@ -92,23 +92,24 @@ android {
 }
 
 dependencies {
+
+    /** START - Google Play Builds **/
     def retrofit_version = "2.1.0"
-    def billing_version = "5.0.0"
+    def billing_version = "5.1.0"
     def gson_version = "2.10"
     implementation "com.android.billingclient:billing:$billing_version"
     implementation "com.google.code.gson:gson:$gson_version"
 
-    //implementation 'com.android.support:multidex:1.0.3'
+    /** config onesignal */
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-
     implementation 'com.google.android.gms:play-services-location:18.0.0'
-
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-
-    /** START - Google Play Builds **/
     implementation('com.onesignal:OneSignal:4.8.3')
+
+    /** Google Ads **/
+    implementation 'com.google.android.gms:play-services-ads:21.4.0'
 }
