--- a/NativeProject/Android/IAP-Test/src/main/AndroidManifest.xml
+++ b/NativeProject/Android/IAP-Test/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:value="ca-app-pub-3940256099942544~3347511713"/>
   </application>
   <uses-feature android:glEsVersion="0x00020000" />
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+<!--  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
   <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
   <uses-feature android:name="android.hardware.touchscreen.multitouch" android:required="false" />
   <uses-feature android:name="android.hardware.touchscreen.multitouch.distinct" android:required="false" />
