- update onesignal push

--- a/NativeProject/IOS/Podfile
+++ b/NativeProject/IOS/Podfile
@@ -4,11 +4,13 @@ platform :ios, '9.0'
 target 'Unity-iPhone' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
-
+  pod 'OneSignalXCFramework', '>= 3.0.0', '< 4.0'
   # Pods for Unity-iPhone
-  target 'Unity-iPhone Tests' do
-    inherit! :search_paths
-    # Pods for testing
-  end
 
+end
+
+target 'OneSignalNotificationServiceExtension' do
+  # Comment the next line if you don't want to use dynamic frameworks
+  use_frameworks!
+  pod 'OneSignalXCFramework', '>= 3.0.0', '< 4.0'
 end
