--- a/NativeProject/IOS/Podfile
+++ b/NativeProject/IOS/Podfile
@@ -5,7 +5,8 @@ target 'Unity-iPhone' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
   pod 'OneSignalXCFramework', '>= 3.0.0', '< 4.0'
-  pod 'Google-Mobile-Ads-SDK'
+  pod 'Google-Mobile-Ads-SDK' 
+  pod 'Firebase/Analytics'
   # Pods for Unity-iPhone
 
 end
