--- a/NativeProject/Android/IAP-Test/build.gradle
+++ b/NativeProject/Android/IAP-Test/build.gradle
@@ -111,4 +111,8 @@ dependencies {
 
     /** Google Ads **/
     implementation 'com.google.android.gms:play-services-ads:21.4.0'
+
+    /** Add Firebase and Remote Config */
+    implementation("com.google.firebase:firebase-config:21.4.1")
+    implementation("com.google.firebase:firebase-analytics:21.3.0")
 }
